# witchcraft

./: Cargo.toml
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json
assets/keymaps/linux/: emacs.json  jetbrains.json
assets/keymaps/macos/: emacs.json  jetbrains.json
assets/settings/: default.json
crates/agent/src/: edit_agent.rs  native_agent_server.rs
crates/agent_settings/src/: agent_profile.rs
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: agent_configuration.rs  agent_panel.rs  agent_ui.rs  auth_manager.rs  buffer_codegen.rs  inline_assistant.rs  witchcraft_agent_status_item.rs
crates/agent_ui_v2/src/: agents_panel.rs
crates/collab_ui/: Cargo.toml
crates/collab_ui/src/: notification_panel.rs
crates/component_preview/src/: component_preview_example.rs
crates/db/src/: db.rs  kvp.rs
crates/edit_prediction_ui/src/: edit_prediction_button.rs
crates/editor/src/: element.rs
crates/eval/src/: eval.rs
crates/gpui/src/: action.rs
crates/gpui_macros/src/: derive_inspector_reflection.rs
crates/notifications/: Cargo.toml
crates/notifications/src/: notifications.rs  witchcraft_client.rs
crates/title_bar/: Cargo.toml
crates/workspace/: Cargo.toml
crates/zed/: Cargo.toml  build.rs
script/: bundle-mac
witchcraft_schema/: 00_supabase_auth_setup.sql  01_core_tables.sql  02_ai_usage_tables.sql  03_agent_sessions.sql  04_billing_tables.sql  04_quota_tables.sql  05_indexes.sql  06_rls_policies.sql  07_functions.sql  API_INTEGRATION_EXAMPLES.md  QUICK_START.md  README.md  SCHEMA_OVERVIEW.md
(+60 files in other folders)
