[package]
name = "notifications"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/notifications.rs"
doctest = false

[features]
test-support = [
    "channel/test-support",
    "collections/test-support",
    "gpui/test-support",
    "rpc/test-support",
]

[dependencies]
anyhow.workspace = true
channel.workspace = true
client.workspace = true
component.workspace = true
db.workspace = true
futures.workspace = true
gpui.workspace = true
gpui_tokio.workspace = true
http_client.workspace = true
log.workspace = true
parking_lot.workspace = true
rpc.workspace = true
serde.workspace = true
serde_json.workspace = true
sum_tree.workspace = true
time.workspace = true
ui.workspace = true
url.workspace = true
util.workspace = true
workspace.workspace = true
yawc.workspace = true
zed_actions.workspace = true

[dev-dependencies]
client = { workspace = true, features = ["test-support"] }
collections = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
rpc = { workspace = true, features = ["test-support"] }
settings = { workspace = true, features = ["test-support"] }
util = { workspace = true, features = ["test-support"] }
